--- a/assets/less/designer.less
+++ b/assets/less/designer.less
@@ -9,6 +9,7 @@ body {
 }
 
 .flow-editor {
+  z-index: 1;
   .flex(4);
   .flex-display;
   background-color: rgb(243, 246, 247);
@@ -23,6 +24,7 @@ body {
 
 
 .designer__octoblu-logo {
+  z-index:100;
   position: fixed;
   left: 6px;
   bottom: 20px;
@@ -34,6 +36,7 @@ body {
 }
 
 .designer__zoom-controls {
+  z-index:100;
   position: fixed;
   right: 420px;
   bottom: 20px;
@@ -84,6 +87,7 @@ body {
 }
 
 .sidebar__expand-button {
+  z-index:100;
   top: 40%;
   right: 400px;
 
