--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -219,9 +219,9 @@
 
 .sidebar__loading-icon {
   flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .flex-display;
+  .align-items(center);
+  .justify-content(center);
   margin: 60px 0;
 
   color: @sidebar-button-color;
