--- a/assets/less/interior.less
+++ b/assets/less/interior.less
@@ -18,7 +18,7 @@
     .flex;
     .flex-display;
     .flex-direction(row);
-    .justify-content(flex-end);
+    .justify-content(space-between);
 
     padding-bottom: 15px;
   }
