made toast show up over everything else

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -1,3 +1,7 @@
+md-toast {
+  z-index: 9999;
+}
+
 .materialize {
   .flex-display;
   .flex(1);
@@ -23,7 +27,7 @@
   .flow-image-but-really-the-flow {
     background-color: lightgrey;
     transition: 1s all;
-    .flow-editor {      
+    .flow-editor {
       flex-shrink: 0;
       -webkit-flex-shrink: 0;
     }
