--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -51,4 +51,5 @@
 @import 'designer/flow-top-bar.less';
 @import 'node-forms/compose.less';
 @import 'blu/blu-buttons.less';
+@import 'blu/blu-bordered-header.less';
 @import 'blu/blu-loading.less';
