--- a/assets/less/node-collection.less
+++ b/assets/less/node-collection.less
@@ -1,4 +1,41 @@
-.node-collection {
+.node-collection {}
+
+.node-collection--list {}
+
+.node-collection--grid {}
+
+.node-collection__items {
+  .flex-display;
+  .flex-wrap(wrap);
+  .justify-content(center);
+
+  .node-collection--grid & {
+    .flex-direction(row);
+  }
+
+}
+
+.node-collection__item {
+  .flex-display;
+  .align-items(center);
+  .flex-direction(column);
+
+  cursor: pointer;
+
+  .node-collection--grid & {
+    .flex-direction(row);
+
+    padding: 8px;
+    // background: oldlace;
+  }
+
+}
+
+.node-collection__item-thumbnail {
+  display: block;
+  width: 50px;
+  height: 50px;
+  // background: pink;
 }
 
 .node-collection-item {
