Update things in node inspector

--- a/assets/less/blu/blu-bordered-header.less
+++ b/assets/less/blu/blu-bordered-header.less
@@ -1,5 +1,6 @@
 .blu-bordered-header {
   position: relative;
+  margin: 12px 12px 0;
 }
 
 .blu-bordered-header-label {
@@ -8,7 +9,7 @@
   display: inline-block;
   padding-right: 10px;
 
-  background: #FFF;
+  background: #F9FBFC;
   font-size: 13px;
   font-weight: bold;
   text-transform: uppercase;
