--- a/assets/less/node-collection.less
+++ b/assets/less/node-collection.less
@@ -7,7 +7,7 @@
 .node-collection__items {
   .flex-display;
   .flex-wrap(wrap);
-  .justify-content(center);
+  // .justify-content(center);
 
   .node-collection--grid & {
     .flex-direction(row);
