Aaron is a FREAKING GENIUS

--- a/assets/less/interior.less
+++ b/assets/less/interior.less
@@ -20,7 +20,7 @@
     .flex-direction(row);
     .justify-content(space-between);
 
-    padding-bottom: 15px;
+    padding-bottom: 0;
   }
 }
 
@@ -29,7 +29,7 @@
   .flex-display;
   .flex-direction(row);
   .justify-content(space-between);
-  .align-items(center);
+  .align-items(flex-start);
 }
 
 .interior__header-action {
