I THINK ITS READY

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -65,6 +65,10 @@
     border-bottom: 0px;
   }
 
+  .sidebar__pane-node--delete {
+    display: none;
+  }
+
   footer {
     border-bottom: 1px solid @sidebar-border-color
   }
@@ -395,4 +399,8 @@ md-divider.sidebar__section-divider {
 
   font-size: 1.17em;
   font-weight: bold;
+}
+
+.sidebar__pane-node--delete {
+  top: 35px;
 }
