--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -19,6 +19,10 @@
     .flow {
       .flow-blueprint;
       margin-left: 16px;
+      border: 1px solid #dedede;
+      &:hover {
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.14), 0px 2px 2px 0px rgba(0, 0, 0, 0.098), 0px 1px 5px 0px rgba(0, 0, 0, 0.084);
+      }
     }
 
     .name {
