add categories to sidebar thing list

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -74,6 +74,12 @@
   }
 }
 
+.sidebar__pane-body--collapse-btn {
+  &:extend(.sidebar__pane-section--collapse-btn);
+  z-index: 2;
+}
+
+
 .sidebar__pane-body {
   .flex(1);
   .flex-direction(column);
