Working... sort of...

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -35,6 +35,7 @@
 @import 'home.less';
 @import 'octos.less';
 @import 'sidebar.less';
+@import 'sidebar-pane.less';
 @import 'node-collection.less';
 @import 'styles.less';
 @import 'terms.less';
