--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -5,8 +5,8 @@
 @sidebar-button-color  : rgba(0,0,0,0.4);
 @sidebar-header-color  : #3C3D3E;
 
-.sidebar {
-  .flex;
+* { min-height: 0}
+.sidebar {  
   .flex-display;
   .flex-direction(column);
 
