made create a new flow more obvious

--- a/assets/less/lib/bootstrap/dropdowns.less
+++ b/assets/less/lib/bootstrap/dropdowns.less
@@ -69,6 +69,12 @@
     color: @dropdown-link-color;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
   }
+  .dropdown-new-flow {
+    font-weight: bold;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 // Hover/Focus state
@@ -212,4 +218,3 @@
     }
   }
 }
-
