--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -1,17 +1,17 @@
 @sidebar-body-padding  : 12px;
-@sidebar-header-height : 34px;
+@sidebar-header-height : 28px;
 @sidebar-width         : 400px;
 @sidebar-border-color  : #C5C5C5;
 @sidebar-button-color  : rgba(0,0,0,0.4);
-@sidebar-header-color  : #3C3D3E;
+@sidebar-header-color  : rgba(0, 0, 0, 0.4);
 
 * { min-height: 0}
+
 .sidebar {
   .flex-display;
   .flex-direction(column);
 
   border-left: 1px solid @sidebar-border-color;
-  //margin-top: 64px;
   width: 0;
 
   background: #FFF;
