Polishing the sidebar like a BAWSE

--- a/assets/less/sidebar-pane.less
+++ b/assets/less/sidebar-pane.less
@@ -121,4 +121,13 @@
   cursor: pointer;
 }
 
-.Sidebar-filter-form {}
+.Sidebar-pane-form {
+  md-input-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  md-switch {
+    margin: 0;
+  }
+}
