--- a/assets/less/sidebar-pane.less
+++ b/assets/less/sidebar-pane.less
@@ -98,7 +98,7 @@
 }
 
 .Sidebar-pane-footer-action {
-  .sidebar__toolbar-button;
+  .Sidebar-toolbar-button;
   border-right: 1px solid @sidebar-border-color;
 }
 
@@ -114,7 +114,7 @@
 }
 
 .Sidebar-pane-collapse-button {
-  .sidebar__toolbar-button;
+  .Sidebar-toolbar-button;
   position: absolute;
   top: 0;
   right: 0;
