dem breadcrumbs tho

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -46,6 +46,7 @@
 @import 'random-robot.less';
 @import 'error.less';
 @import 'tabs.less';
+@import 'breadcrumbs.less';
 @import 'interior.less';
 @import 'lookup.less';
 @import 'designer.less';
