--- a/assets/less/lib/bootstrap/navbar.less
+++ b/assets/less/lib/bootstrap/navbar.less
@@ -4,7 +4,7 @@ md-sidenav.md-sidenav-left {
   .md-fab {
     position:fixed;
     top: 5px;
-    left: 310px;
+    left: 2600px;
   }
 
   .navbar-logo {
@@ -689,4 +689,9 @@ md-sidenav.md-sidenav-left {
       }
     }
   }
+}
+
+md-divider.navbar-divider {
+  border-top-color: rgba(0, 0, 0, 0.09);
+  margin: 12px 0;
 }
