fix z-index issues with top bar in designer

--- a/assets/less/designer/flow-top-bar.less
+++ b/assets/less/designer/flow-top-bar.less
@@ -1,9 +1,8 @@
 .flow-top-bar {
   .flex-direction(row);
 
-  //position: fixed;
-  top: 0;
-  left: 0;
+  z-index: auto;
+  position: relative;
 }
 
 
