--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -52,6 +52,7 @@
 @import 'designer.less';
 @import 'designer/flow-top-bar.less';
 @import 'node-forms/compose.less';
+@import 'unread.less';
 @import 'blu/blu-buttons.less';
 @import 'blu/blu-bordered-header.less';
 @import 'blu/blu-loading.less';
