--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -22,6 +22,24 @@
   height: auto;
 }
 
+.node-wizard__description {
+  .flex-display();
+  .flex-direction(column);
+  .flex(1);
+
+  padding: 25px 0px;
+  margin: 0 auto;
+  margin-top: 0;
+
+  max-width: 500px;
+}
+
+.node-wizard__description--text {
+  text-align: center;
+  font-size: 20px;
+  color: #686868;
+}
+
 .node-wizard__body {
   .align-items(center);
   .flex-direction(column);
@@ -77,28 +95,16 @@
   .flex-display;
   .justify-content(center);
 
+  margin: 20px auto;
+  background-color: #FFF;
+
+  height: 200px;
+  width: 200px;
+
   img {
-    margin: 20px;
-
-    @media @mobile, @tablet {
-      max-height: 200px;
-      width: 75%;
-    }
-
-    @media @desktop, @desktop-lg {
-      max-height: 250px;
-      width: 30%;
-    }
-
-    @media @desktop-xl, @desktop-xxl {
-      max-height: 400px;
-      width: 30%;
-    }
-
-    @media @desktop-xxl {
-      max-height: 500px;
-      width: 15%;
-    }
+    height: 170px;
+    width: 170px;
+    margin: 15px;
   }
 }
 
@@ -139,7 +145,7 @@
   p {
     .flex(1);
     text-align: center;
-    font-size: 1.3em;
+    font-size: 18px;
     max-width: 750px;
   }
 }
