it looks better than it used to

--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -18,8 +18,10 @@
 .node-wizard__logo {
   display: block;
   margin-bottom: 15px;
-  width: 40%;
-  height: auto;
+  width: 200px;
+  height: 200px;
+
+  border: 1px solid #EDEDED;
 }
 
 .node-wizard__description {
@@ -94,17 +96,18 @@
 .node-wizard-logo-container {
   .flex-display;
   .justify-content(center);
+  .align-items(center);
 
   margin: 20px auto;
   background-color: #FFF;
 
   height: 200px;
   width: 200px;
+  border: 1px solid #EDEDED;
 
   img {
     height: 170px;
     width: 170px;
-    margin: 15px;
   }
 }
 
