added middle connect state with help text

--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -10,9 +10,17 @@
   margin: 30px auto;
 }
 
+.node-wizard__wrapper {
+  .flex-display;
+  .flex-direction(column);
+  .justify-content(center);
+  .align-items(center);
+}
+
 .node-wizard__title {
   margin: 0 0 35px;
   font-size: 32px;
+  text-align: center;
 }
 
 .node-wizard__logo {
