--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -184,6 +184,11 @@
 
 }
 
+.node-wizard__connect--btn {
+  cursor: pointer;
+  text-align: center;
+}
+
 .gateblu-download {
   .flex-display();
   .flex-direction(column);
