Added in SHOW/HIDE functionality to categories in node-collection, fixed divider styling

--- a/assets/less/device-collection.less
+++ b/assets/less/device-collection.less
@@ -7,29 +7,7 @@
 }
 
 .device-collection__header {
-  position: relative;
-}
-
-.device-collection__header-label {
-  position: relative;
-
-  display: inline-block;
-  padding-right: 10px;
-
-  background: #FFF;
-  font-size: 13px;
-  font-weight: bold;
-  z-index: 2;
-}
-
-.device-collection__header-divider {
-  position: absolute;
-  top: 50%;
-  left: 0;
-
-  margin: 0;
-  width: 100%;
-  z-index: 1;
+  .blu-bordered-header(white);  
 }
 
 .device-collection__items {
