--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -17,6 +17,10 @@
   background: #FFF;
   opacity: 0;
   overflow: hidden;
+
+  .category-header {
+    .blu-bordered-header(#F9FBFC);
+  }
 }
 
 .sidebar--is-expanded {
