--- a/assets/less/blu/blu-bordered-header.less
+++ b/assets/less/blu/blu-bordered-header.less
@@ -1,27 +1,18 @@
-.blu-bordered-header {
-  position: relative;
+.blu-bordered-header(@background-color: rgba(0,0,0,0)) {
   margin: 12px 12px 0;
-}
-
-.blu-bordered-header-label {
-  position: relative;
-
-  display: inline-block;
-  padding-right: 10px;
-
-  background: #F9FBFC;
-  font-size: 13px;
-  font-weight: bold;
-  text-transform: uppercase;
-
-  z-index: 1;
-}
-
-.blu-bordered-header-divider {
-  position: absolute;
-  top: 50%;
-  left: 0;
-
-  margin: 0;
-  width: 100%;
+  .flex-display;
+  .justify-content(space-between);
+  background-image: -webkit-linear-gradient(top, @background-color 49%, #eeeeee 51%, @background-color 52%);
+  background-image: -moz-linear-gradient(top, @background-color 49%, #eeeeee 51%, @background-color 52%);
+  background-image: linear-gradient(top, @background-color 49%, #eeeeee 51%, @background-color 52%);
+  & > * {
+    padding: 0 7px;
+    background: @background-color;
+    font-size: 13px;
+    text-transform: uppercase;
+    z-index: 1;
+  }
+  h4 {
+    font-weight: bold;
+  }
 }
