UI updates to bluprint

--- a/assets/less/bluprints.less
+++ b/assets/less/bluprints.less
@@ -1,242 +1,8 @@
-.bluprint-action-icon {
-  color: #3D4048;
-}
+.Bluprints {
+  background: #FFF;
 
-.bluprints-toolbar {
-  .align-items(center);
+  margin: 0;
+  padding: 0;
 
-  .search {
-    background-color: #2F6CA1;
-    padding: 5px 0;
-    margin-left: 1em;
-    .flex(1);
-
-    md-icon {
-      margin: 5px 10px 0;
-      font-size: 17px;
-      &:focus{
-        color: #EDEDED;
-      }
-    }
-
-    .md-input {
-      color: white;
-      border: none;
-      margin-left: 40px;
-    }
-  }
-
-  .bluprint-header {
-    font-size: 1em;
-    padding-left: 8px;
-  }
-}
-
-.bluprint-loading-indicator {
-  .flex-display;
-  .flex(1);
-  .justify-content(center);
-  .align-items(center);
-  font-size: 6em;
-}
-
-.bluprints-no-bluprints {
-  .flex-display;
-  .flex-direction(column);
-  .flex(1);
-  .justify-content(center);
-  .align-items(center);
-  font-size: 2em;
-  text-align: center;
-}
-
-.bluprints-container {
-  padding: 16px;
-  .t-item {
-    .clickable {
-      cursor: pointer;
-    }
-  }
-  .flows {
-    .flex-display;
-    .flex-direction(column);
-    .justify-content(flex-start);
-    padding: 0;
-
-    > li {
-      list-style: none;
-    }
-
-  h3 {
-    font-size: 1.17em;
-    font-weight: bold;
-    outline: none;
-  }
-
-  }
-
-  .flow {
-    .md-whiteframe-z1;
-    .flow-blueprint;
-    &.selected-bluprint {
-      .md-whiteframe-z2;
-    }
-  }
-}
-.bluprint-editor {
-  .clickable {
-    cursor: pointer;
-  }
-  .content {
-    .flex-display;
-    .flex-direction(row);
-    .align-items(flex-start);
-  }
-  .properties-editor {
-    .flex(1);
-    min-width: 15em;
-  }
-}
-
-.search-container{
-  .flex-display;
-  .flex-direction(row);
-  .justify-content(space-around center);
-
-  margin: auto;
-  min-height: 60px;
-}
-
-.search-bar{
-  .flex(90);
-
-  margin-bottom: 0;
-  padding: 10px;
-}
-
-.search-bar-form{
-  .flex-display;
-  .flex-direction(row);
-  .justify-content(center);
-  width: 100%;
-}
-.template-list-container {
-  .flex-display;
-  .flex(1);
-  min-width: 30em;
-  .template-list {
-    .flex(1);
-  }
-}
-
-.directory__search-tags {
-  display: inline-block;
-  margin: 0px 10px;
-  padding: 10px 20px;
-  background: #F0F0F0;
-  color: #444;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 15px;
-}
-
-.directory__search-remove-tag {
-  padding-left: 10px;
-
-}
-
-.current-template-info {
-  .flex-display;
-  .flex(1);
-  .flex-direction(row);
-  .flex-wrap(wrap);
-  .align-items(flex-start);
-  max-height: 30%;
-  padding: 0 0 15px 15px;
-  @media mobile,tablet{
-    width: 100%;
-  }
-  .template-name {
-    .flex(1);
-  }
-  .template-tags {
-    .flex(1);
-    min-width: 100%;
-  }
-  .bill-of-materials {
-    min-width: 100%;
-  }
-}
-
-.template-preview{
-  .flex-display;
-  .flex(3);
-  .flex-direction(column);
-}
-
-.template-preview md-input-group {
-  font-size: 1.1em;
-  input {
-    width: 50%;
-  }
-}
-
-.template-info{
-  .flex(4);
-  .flex-display;
-  .flex-direction(row);
-  .flex-wrap(wrap);
-  .justify-content(space-between);
-  min-width: 20em;
-}
-
-.template-button-container{
-  .flex-grow(1);
-  .flex-display;
-  .flex-direction(row);
-  .flex-wrap(wrap);
-  .justify-content(center);
-}
-
-.template-container{
-  .flex(1);
-  .flex-display;
-  .flex-direction(row);
-  .justify-content(center);
-  z-index: 3;
-  background-repeat: repeat;
-}
-
-.templates-list{
-  .flex-display;
-  .flex-direction(column);
-  .flex-wrap(wrap);
-}
-
-.template-item {
-  cursor:pointer;
-  & > md-item-content{
-    .flex-display;
-    .flex-direction(row);
-    .justify-content(space-around);
-  }
-  img {
-    margin:15px;
-  }
-
-  h3 {
-    margin-top: 24px;
-  }
-  h4 {
-    margin-right: 15px;
-  }
-  md-item-content {
-    transition: 0.2s box-shadow;
-    box-shadow: none;
-  }
-  &.selected {
-    md-item-content {
-      .selected-item;
-    }
-  }
+  list-style: none;
 }
