--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -40,6 +40,7 @@
 @import 'styles.less';
 @import 'terms.less';
 @import 'flow-directory.less';
+@import 'bluprint.less';
 @import 'bluprints.less';
 @import 'browse.less';
 @import 'auth.less';
