Added SHOW/HIDE functionality into Categories on things page

--- a/assets/less/device-collection.less
+++ b/assets/less/device-collection.less
@@ -7,7 +7,15 @@
 }
 
 .device-collection__header {
-  .blu-bordered-header(white);  
+  .blu-bordered-header(white);
+}
+
+.device-collection__button {
+  .Sidebar-button;
+
+  padding: 0 7px;
+
+  background: white;
 }
 
 .device-collection__items {
